<resources>
    <string name="app_name">Music Controller</string>
    <string name="music_controller">Music Controller</string>
    <string name="music_title">Music Title</string>
    <string name="artist">Artist</string>
    <string name="_00_00">00:00</string>
    <string name="play_or_pause_button">play or pause button</string>
    <string name="forward_button">forward button</string>
    <string name="backward_button">backward button</string>
    <string name="notification">Notification</string>
    <string name="api">API</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>