<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.NotificationFragment"
   >


    <TextView
        android:id="@+id/tv_music_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/music_controller"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_music_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_title"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_music_controller" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/artist"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_music_title" />


    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seek_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:max="100"
        android:progressTint="@color/white"
        android:scaleY="1.5"
        android:thumb="@drawable/music_player_thumb"
        android:thumbTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_00_00"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar"/>

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_00_00"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:clickable="true"
        android:contentDescription="@string/play_or_pause_button"
        android:elevation="12dp"
        android:focusable="true"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fwd"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:contentDescription="@string/forward_button"
        android:elevation="12dp"
        android:focusable="true"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="@id/btn_play_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_play_pause"
        app:layout_constraintTop_toTopOf="@id/btn_play_pause" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_bwd"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:contentDescription="@string/backward_button"
        android:elevation="12dp"
        android:focusable="true"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="@id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@id/btn_play_pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_play_pause" />


</androidx.constraintlayout.widget.ConstraintLayout>